Include headers when exporting in CSV

--- a/src/main/resources/displaytag.properties
+++ b/src/main/resources/displaytag.properties
@@ -4,3 +4,5 @@ locale.resolver = org.efs.openreports.util.displaytag.DisplayTagI18nStruts2Adapt
 locale.provider = org.efs.openreports.util.displaytag.DisplayTagI18nStruts2Adapter
 
 basic.empty.showtable=true
+
+export.csv.include_header=true
