--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,11 @@
     <packaging>war</packaging>
     <version>3.3.0-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    </properties>
+
     <repositories>
         <repository>
             <id>java.net</id>
