Add support for specifying font directories (used when generating BIRT reports)

--- a/src/main/resources/openreports.properties
+++ b/src/main/resources/openreports.properties
@@ -27,3 +27,6 @@ quartz.jdbc.maxActive=5
 #number of threads that are available for concurrent execution of jobs
 org.quartz.threadPool.threadCount = 5
 
+#font directories to be used with BIRT
+#openreports.font.directories=/Library/Fonts
+
